# robonaut2026

./: RobonAUT_rendszerterv.drawio
hardware/: .gitignore
hardware/shield/: fp-lib-table  shield-altium-import.kicad_sym  shield.kicad_dru  shield.kicad_pcb  shield.kicad_pro  shield.kicad_sch  sym-lib-table
hardware/shield/gerbers/: shield-NPTH.drl  shield-PTH.drl
robonaut-firmware/: .clang-format  .gitignore  .mxproject  .project  CMakeLists.txt  Readme.md  mx-generated-mod.cmake  robonaut-firmware.ioc
robonaut-firmware/Appli/: .cproject  .project  CMakeLists.txt  RobonAUT FLASH attach.launch  RobonAUT FLASH prog (DEBUG).launch  STM32N657X0HXQ_ROMxspi2.ld  mx-generated.cmake
robonaut-firmware/Appli/Control/ControllerTuning/: tuning_interface.h
robonaut-firmware/Appli/Control/HwTest/: test_interface.h
robonaut-firmware/Appli/Control/LineController/: lc_interface.h
robonaut-firmware/Appli/Control/LineProcessor/: line_interface.h
robonaut-firmware/Appli/Control/System/: sys_interface.h
robonaut-firmware/Appli/Core/Inc/: adc.h  cacheaxi.h  dcmipp.h  hpdma.h  main.h  ramcfg.h  spi.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h  tim.h  usart.h  usb_otg.h
robonaut-firmware/Appli/IntHandler/: int_interface.h
robonaut-firmware/Appli/Middlewares/: CMakeLists.txt
robonaut-firmware/Appli/Middlewares/AI_Runtime/Npu/Devices/STM32N6XX/: npu_cache.c  npu_cache.h
robonaut-firmware/Appli/Middlewares/AI_Runtime/Npu/ll_aton/: ll_aton_rt_main.c
robonaut-firmware/Appli/Middlewares/lib_vision_models_pp/: README.md
robonaut-firmware/Appli/Middlewares/lib_vision_models_pp/Inc/: od_pp_loc.h  od_yolov4_pp_if.h
robonaut-firmware/Appli/Middlewares/lib_vision_models_pp/Src/: iseg_pp_yolov8.c  od_pp_st_yolox.c  od_pp_yolov4.c  od_pp_yolov8.c  spe_movenet_pp.c  sseg_pp_deeplabv3.c  vision_models_pp.h  vision_models_pp_maxi_if32.c  vision_models_pp_maxi_is8.c  vision_models_pp_maxi_iu8.c
robonaut-firmware/Appli/Middlewares/screenl/: README.md  Release_Notes.html  Release_Notes.md  scr_lib.mk
robonaut-firmware/Appli/Middlewares/screenl/Inc/: scrl.h
robonaut-firmware/Appli/Middlewares/screenl/Src/: scrl_common.c  scrl_common.h  scrl_usb.c
robonaut-firmware/Appli/Middlewares/screenl/uvcl/: README.md  Release_Notes.html  Release_Notes.md
robonaut-firmware/Appli/Middlewares/screenl/uvcl/Inc/: uvcl.h  uvcl_desc.h  uvcl_internal.h
robonaut-firmware/Appli/Middlewares/screenl/uvcl/Inc/usbx/: ux_user.h
robonaut-firmware/Appli/Middlewares/screenl/uvcl/Src/: uvcl.c  uvcl_desc.c  uvcl_desc_internal.h
robonaut-firmware/Appli/Middlewares/screenl/uvcl/Src/usbx/: uvcl_usbx.c
robonaut-firmware/Appli/Middlewares/stm32_lcd/: stm32_lcd.c  stm32_lcd.h
robonaut-firmware/Appli/Telemetry/: packets.md  tel_interface.h
robonaut-firmware/FSBL/: .cproject  .project  CMakeLists.txt  mx-generated.cmake
robonaut-firmware/MemLoader/: RobonAUT_FSBL_XIP_ExtMemLoader.stldr
robonaut-firmware/Scripts/: cmake-build.ps1  cmake-build.sh  upload-fsbl.ps1  upload-fsbl.sh
telemetry/: .clang-format  CMakeLists.txt  README.md
telemetry/scripts/: build.sh  deploy-service.sh
telemetry/src/log/: CMakeLists.txt  log.c  log.h
telemetry/src/tel-cli/: CMakeLists.txt  commands.c  commands.h  main.c
telemetry/src/tel-server/: CMakeLists.txt  main.c  var.c  var.h
telemetry/src/tel-server/ctrl/: ctrl_interface.h
telemetry/src/tel-server/ctrl/impl/: ctrl.c  ctrl.h
telemetry/src/tel-server/systemd/: tel-server.service
telemetry/src/tel-server/uart/: packets.md  uart_interface.h
telemetry/src/tel-server/uart/impl/: uart.c  uart.h
telemetry/src/tel-server/zmqs/: zmq.md  zmqs_interface.h
telemetry/src/tel-server/zmqs/impl/: zmqs.c  zmqs.h
(+112 files in other folders)
